collect form data

--- a/FrontApp/index.html
+++ b/FrontApp/index.html
@@ -26,7 +26,7 @@
           <div class="ph">
             <img class="photo" src="./img/d2.png" alt="Loading">
             <p class="last">I'll help you diagnose your heart health! <br> - Dr. Logistic Regression</p>
-            <button class="Bo">Predict</button>
+            
           </div>
           <div class="Di">
             <p>
@@ -82,7 +82,7 @@
         <h3>Feature Selection</h3>
         <img src="./img/heart.png" alt="heart" />
       </div>
-      <form>
+      <form id="patient-form">
         <div>
           <div>
             <label for="race">Race</label>
@@ -254,6 +254,7 @@
             <option value="Yes-during pregnancy">Yes (during pregnancy)</option>
           </select>
         </div>
+        <input class="Bo" type="submit">  </input>
       </form>
     </div>
   </main>
