--- a/FrontApp/index.html
+++ b/FrontApp/index.html
@@ -85,32 +85,7 @@
         </div>
         <form id="patient-form">
           <div>
-<<<<<<< HEAD
             <label for="Sex">Sex</label>
-=======
-            <div>
-              <label for="race">Race</label>
-            </div>
-            <select name="Race" id="race">
-              <option value="American Indian/Alaskan Native" selected>
-                American Indian/Alaskan Native
-              </option>
-              <option value="Asian">Asian</option>
-              <option value="Black">Black</option>
-              <option value="Hispanic">Hispanic</option>
-              <option value="Other">Other</option>
-              <option value="White">White</option>
-            </select>
-          </div>
-          <div>
-            <div>
-              <label for="Sex">Sex</label>
-            </div>
-            <select name="Sex" id="Sex">
-              <option value="Male" selected>Male</option>
-              <option value="Female">Female</option>
-            </select>
->>>>>>> 55a086c7ff5247f7698c219aaabc275664503328
           </div>
           <div>
             <div>
@@ -133,7 +108,6 @@
               <option value="80 or older">80 or older</option>
             </select>
           </div>
-<<<<<<< HEAD
           
           <select name="AgeCategory" id="Agecategory">
             <option value="18-24" selected>18-24</option>
@@ -152,32 +126,24 @@
           </select>
         </div>
         <div>
-=======
->>>>>>> 55a086c7ff5247f7698c219aaabc275664503328
           <div>
             <div>
               <label for="BMI-category">BMI category</label>
             </div>
             <input type="number" name="BMI-category" id="BMI-category">
           </div>
-<<<<<<< HEAD
           <input type="number" name="BMI" id="BMI-category">
         </div>
         <div>
-=======
->>>>>>> 55a086c7ff5247f7698c219aaabc275664503328
           <div>
             <div>
               <label for="sleep-hours">How many hours on average do you sleep?</label>
             </div>
             <input type="number" min="1" id="sleep-hours" name="sleep-hours">
           </div>
-<<<<<<< HEAD
           <input type="number" min="1" id="sleep-hours" name="SleepTime">
         </div>
         <div>
-=======
->>>>>>> 55a086c7ff5247f7698c219aaabc275664503328
           <div>
             <div>
               <label for="general-health">How can you define your general health?</label>
@@ -190,7 +156,6 @@
               <option value="Very good">Very good</option>
             </select>
           </div>
-<<<<<<< HEAD
           <select name="GenHealth" id="general-health">
             <option value="Excellent" selected>Excellent</option>
             <option value="Fair">Fair</option>
@@ -200,8 +165,6 @@
           </select>
         </div>
         <div>
-=======
->>>>>>> 55a086c7ff5247f7698c219aaabc275664503328
           <div>
             <div>
               <label for="exercis">During the past month, other than your regular job, did you participate in any
@@ -214,7 +177,6 @@
               <option value="Yes">Yes</option>
             </select>
           </div>
-<<<<<<< HEAD
           <select name="PhysicalActivity"
             id="exercis">
             <option value="No" selected>No</option>
@@ -222,8 +184,6 @@
           </select>
         </div>
         <div>
-=======
->>>>>>> 55a086c7ff5247f7698c219aaabc275664503328
           <div>
             <div>
               <label for="physical-health">Now thinking about your physical health, which includes physical illness and
@@ -232,12 +192,9 @@
             </div>
             <input type="number" min="1" max="30" id="physical-health" name="physical-health">
           </div>
-<<<<<<< HEAD
           <input type="number" min="1" max="30" id="physical-health" name="PhysicalHealth">
         </div>
         <div>
-=======
->>>>>>> 55a086c7ff5247f7698c219aaabc275664503328
           <div>
             <div>
               <label for="mental-health">Now thinking about your mental health, which includes stress, depression, and
@@ -246,19 +203,10 @@
             </div>
             <input type="number" min="1" max="30" id="mental-health" name="mental-health">
           </div>
-<<<<<<< HEAD
           <input type="number" min="1" max="30" id="mental-health" name="MentalHealth">
         </div>
         
         <div>
-=======
-          <div>
-            <div>
-              <label for="sleep-hours">On average, how many hours of sleep do you get in a 24-hour period?</label>
-            </div>
-            <input type="number" min="1" max="30" name="sleep-hours" id="sleep-hours">
-          </div>
->>>>>>> 55a086c7ff5247f7698c219aaabc275664503328
           <div>
             <div>
               <label for="walking-difficulty">Do you have serious difficulty walking or climbing stairs?</label>
@@ -268,7 +216,6 @@
               <option value="Yes">Yes</option>
             </select>
           </div>
-<<<<<<< HEAD
           <select name="DiffWalking"
             id="walking-difficulty">
             <option value="No" selected>No</option>
@@ -276,8 +223,6 @@
           </select>
         </div>
         <div>
-=======
->>>>>>> 55a086c7ff5247f7698c219aaabc275664503328
           <div>
             <div>
               <label for="smoking-status">What is your Smoking Status?</label>
@@ -291,7 +236,6 @@
               <option value="Current smoker now smokes every day">Current smoker - now smokes every day</option>
             </select>
           </div>
-<<<<<<< HEAD
           <select name="Smoking" id="smoking-status">
             <option value="Never smoked" selected>Never smoked</option>
             <option value="No">No</option>
@@ -302,8 +246,6 @@
           </select>
         </div>
         <div>
-=======
->>>>>>> 55a086c7ff5247f7698c219aaabc275664503328
           <div>
             <div>
               <label for="drink-alcohol">Are you an Adults who have had at least one drink of alcohol in the past 30
@@ -315,7 +257,6 @@
               <option value="Yes">Yes</option>
             </select>
           </div>
-<<<<<<< HEAD
           <select name="AlcoholDrinking"
             id="Have you smoked at least 100 cigarettes in your entire life (approx. 5 packs)?)">
             <option value="No" selected>No</option>
@@ -369,56 +310,9 @@
             <option value="Yes-during pregnancy">Yes (during pregnancy)</option>
           </select>
         </div>
-        <input class="Bo" type="submit">  </input>
+        <input class="Bo" type="submit">
       </form>
     </div>
-=======
-          <div>
-            <label for="kidney-stones">Not including kidney stones, bladder infection or incontinence, were you ever
-              told
-              you had kidney disease?</label>
-            <select name="kidney-stones" id="kidney-stones">
-              <option value="No">No</option>
-              <option value="yes">Yes</option>
-            </select>
-          </div>
-          <div>
-            <label for="asthma">Were you ever told you had asthma?</label>
-            <select name="asthma" id="asthma">
-              <option value="No">No</option>
-              <option value="Yes">Yes</option>
-            </select>
-          </div>
-          <div>
-            <label for="skin-cancer">Were you ever told you had skin cancer that is not melanoma?</label>
-            <select name="skin-cancer" id="skin-cancer">
-              <option value="No">No</option>
-              <option value="Yes">Yes</option>
-            </select>
-          </div>
-          <div>
-            <label for="kidney-disease">Not including kidney stones, bladder infection or incontinence, were you ever
-              told
-              you had kidney
-              disease?</label>
-            <select name="kidney-disease" id="kidney-disease">
-              <option value="No">No</option>
-              <option value="Yes">Yes</option>
-            </select>
-          </div>
-          <div>
-            <label for="diabetes">Were you ever told you had diabetes?</label>
-            <select name="diabetes" id="diabetes">
-              <option value="No">No</option>
-              <option value="No-borderline diabetes">No (borderline diabetes)</option>
-              <option value="Yes">Yes</option>
-              <option value="Yes-during pregnancy">Yes (during pregnancy)</option>
-            </select>
-          </div>
-          <input class="Bo" type="submit"> </input>
-        </form>
-      </div>
->>>>>>> 55a086c7ff5247f7698c219aaabc275664503328
   </main>
   <footer></footer>
 </body>
